Add some reference for fractional calculus

--- a/All.bib
+++ b/All.bib
@@ -6,8 +6,8 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 72cfa87d860e6ec1993c75c8af21b63547ca6c02
-% Date: 2023-05-16
+% Commit: 8973742fb67b8e9398dbb53da4f52e597c8e23f3
+% Date: 2023-05-19
 % ---------------------------
 
 
@@ -14786,24 +14786,6 @@
 }
 
 @Article{	  conus.joseph.ea:13:on,
-  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar},
-  title		= {On the chaotic character of the stochastic heat equation,
-		  before the onset of intermitttency},
-  journal	= {Ann. Probab.},
-  fjournal	= {The Annals of Probability},
-  volume	= {41},
-  year		= {2013},
-  number	= {3B},
-  pages		= {2225--2260},
-  issn		= {0091-1798},
-  mrclass	= {60H15 (35R60)},
-  mrnumber	= {3098071},
-  mrreviewer	= {Sergey V. Lototsky},
-  doi		= {10.1214/11-AOP717},
-  url		= {https://doi.org/10.1214/11-AOP717}
-}
-
-@Article{	  conus.joseph.ea:13:on*1,
   author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
 		  and Shiu, Shang-Yuan},
   title		= {On the chaotic character of the stochastic heat equation,
@@ -14820,6 +14802,24 @@
   mrreviewer	= {Sergey V. Lototsky},
   doi		= {10.1007/s00440-012-0434-3},
   url		= {https://doi.org/10.1007/s00440-012-0434-3}
+}
+
+@Article{	  conus.joseph.ea:13:on*1,
+  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar},
+  title		= {On the chaotic character of the stochastic heat equation,
+		  before the onset of intermitttency},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {41},
+  year		= {2013},
+  number	= {3B},
+  pages		= {2225--2260},
+  issn		= {0091-1798},
+  mrclass	= {60H15 (35R60)},
+  mrnumber	= {3098071},
+  mrreviewer	= {Sergey V. Lototsky},
+  doi		= {10.1214/11-AOP717},
+  url		= {https://doi.org/10.1214/11-AOP717}
 }
 
 @Article{	  conus.joseph.ea:14:initial,
@@ -29591,6 +29591,19 @@
   url		= {https://doi.org/10.1007/978-94-017-3680-0}
 }
 
+@Book{		  hilfer:00:applications,
+  title		= {Applications of fractional calculus in physics},
+  author	= {Hilfer, R.},
+  publisher	= {World Scientific Publishing Co., Inc., River Edge, NJ},
+  year		= {2000},
+  pages		= {viii+463},
+  isbn		= {981-02-3457-0},
+  mrclass	= {00B15},
+  mrnumber	= {1890104},
+  doi		= {10.1142/9789812817747},
+  url		= {https://doi.org/10.1142/9789812817747}
+}
+
 @Article{	  hinojosa-calleja.sanz-sole:21:anisotropic,
   author	= {Hinojosa-Calleja, Adri\'{a}n and Sanz-Sol\'{e}, Marta},
   title		= {Anisotropic {G}aussian random fields: criteria for hitting
@@ -39633,6 +39646,25 @@
   mrnumber	= {1228390},
   doi		= {10.1063/1.858823},
   url		= {https://doi.org/10.1063/1.858823}
+}
+
+@Article{	  maleknejad.nouri.ea:09:investigation,
+  author	= {Maleknejad, K. and Nouri, K. and Mollapourasl, R.},
+  title		= {Investigation on the existence of solutions for some
+		  nonlinear functional-integral equations},
+  journal	= {Nonlinear Anal.},
+  fjournal	= {Nonlinear Analysis. Theory, Methods \& Applications. An
+		  International Multidisciplinary Journal},
+  volume	= {71},
+  year		= {2009},
+  number	= {12},
+  pages		= {e1575--e1578},
+  issn		= {0362-546X},
+  mrclass	= {45G10 (47H08 47H10 47N20)},
+  mrnumber	= {2671939},
+  mrreviewer	= {Florin Isaia},
+  doi		= {10.1016/j.na.2009.01.207},
+  url		= {https://doi.org/10.1016/j.na.2009.01.207}
 }
 
 @Article{	  malicet.nourdin.ea:16:squared,
@@ -60187,6 +60219,23 @@
 }
 
 @Article{	  zhang:09:variational,
+  author	= {Zhang, Xicheng},
+  title		= {A variational representation for random functionals on
+		  abstract {W}iener spaces},
+  journal	= {J. Math. Kyoto Univ.},
+  fjournal	= {Journal of Mathematics of Kyoto University},
+  volume	= {49},
+  year		= {2009},
+  number	= {3},
+  pages		= {475--490},
+  issn		= {0023-608X},
+  mrclass	= {60H07 (60F10)},
+  mrnumber	= {2583599},
+  doi		= {10.1215/kjm/1260975036},
+  url		= {https://doi.org/10.1215/kjm/1260975036}
+}
+
+@Article{	  zhang:09:variational*1,
   author	= {Zhang, Tusheng},
   title		= {Variational inequalities and optimization for {M}arkov
 		  processes associated with semi-{D}irichlet forms},
@@ -60202,23 +60251,6 @@
   mrreviewer	= {Arie Leizarowitz},
   doi		= {10.1137/080737630},
   url		= {https://doi.org/10.1137/080737630}
-}
-
-@Article{	  zhang:09:variational*1,
-  author	= {Zhang, Xicheng},
-  title		= {A variational representation for random functionals on
-		  abstract {W}iener spaces},
-  journal	= {J. Math. Kyoto Univ.},
-  fjournal	= {Journal of Mathematics of Kyoto University},
-  volume	= {49},
-  year		= {2009},
-  number	= {3},
-  pages		= {475--490},
-  issn		= {0023-608X},
-  mrclass	= {60H07 (60F10)},
-  mrnumber	= {2583599},
-  doi		= {10.1215/kjm/1260975036},
-  url		= {https://doi.org/10.1215/kjm/1260975036}
 }
 
 @Article{	  zhang:10:stochastic,
