--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 63ae3c748165e21da296d77a7a61833076452512
+% Commit: d7ae6978a3ff1effae43cdd241bf6d38d2b49f47
 % Date: 2023-05-31
 % ---------------------------
 
@@ -8462,20 +8462,7 @@
   issn		= {0378-4371},
   doi		= {https://doi.org/10.1016/S0378-4371(99)00526-9},
   url		= {https://www.sciencedirect.com/science/article/pii/S0378437199005269},
-  author	= {Éric Brunet and Bernard Derrida},
-  abstract	= {We show how to define and calculate the ground state
-		  energy of a system of quantum particles with δ attractive
-		  interactions when the number of particles n is non-integer.
-		  The question is relevant to obtain the probability
-		  distribution of the free energy of a directed polymer in a
-		  random medium. When one expands the ground state energy in
-		  powers of the interaction, all the coefficients of the
-		  perturbation series are polynomials in n, allowing to
-		  define the perturbation theory for non-integer n. We
-		  develop a procedure to calculate all the cumulants of the
-		  free energy of the directed polymer and we give explicit,
-		  although complicated, expressions of the first three
-		  cumulants.}
+  author	= {Brunet, Éric and Derrida, Bernard}
 }
 
 @Article{	  brunet.derrida:00:probability,
@@ -12352,10 +12339,10 @@
 }
 
 @Article{	  chen.foondun.ea:23:global,
-  title		= {Global solution for superlinear stochastic heat equation
-		  on $\mathbb{R}^d$ under Osgood-type conditions},
   author	= {Chen, Le and Foondun, Mohammud and Huang, Jingyu and
 		  Salins, Mickey},
+  title		= {Global solution for superlinear stochastic heat equation
+		  on $\mathbb{R}^d$ under Osgood-type conditions},
   year		= {2023},
   journal	= {Working progress}
 }
@@ -22587,9 +22574,7 @@
   issn		= {0167-2789},
   doi		= {https://doi.org/10.1016/j.physd.2008.09.005},
   url		= {https://www.sciencedirect.com/science/article/pii/S0167278908003400},
-  author	= {Julian {Fern\'andez Bonder} and Pablo Groisman},
-  keywords	= {Explosion, Stochastic partial differential equations,
-		  Reaction–diffusion equations}
+  author	= {Julian {Fern\'andez Bonder} and Pablo Groisman}
 }
 
 @Book{		  fernandez.frohlich.ea:92:random,
@@ -32989,7 +32974,7 @@
 }
 
 @Article{	  isogami.matsushita:92:structural,
-  author	= {Isogami ,Sadao and Matsushita ,Mitsugu},
+  author	= {Isogami, Sadao and Matsushita, Mitsugu},
   title		= {Structural and Statistical Properties of Self-Avoiding
 		  Fractional Brownian Motion},
   journal	= {Journal of the Physical Society of Japan},
@@ -38491,7 +38476,7 @@
 @InProceedings{	  li.tai.ea:17:stochastic,
   title		= {Stochastic Modified Equations and Adaptive Stochastic
 		  Gradient Algorithms},
-  author	= {Qianxiao Li and Cheng Tai and Weinan E},
+  author	= {Li, Qianxiao and Tai, Cheng and E, Weinan},
   booktitle	= {Proceedings of the 34th International Conference on
 		  Machine Learning},
   pages		= {2101--2110},
@@ -38502,17 +38487,7 @@
   month		= {06--11 Aug},
   publisher	= {PMLR},
   pdf		= {http://proceedings.mlr.press/v70/li17f/li17f.pdf},
-  url		= {https://proceedings.mlr.press/v70/li17f.html},
-  abstract	= {We develop the method of stochastic modified equations
-		  (SME), in which stochastic gradient algorithms are
-		  approximated in the weak sense by continuous-time
-		  stochastic differential equations. We exploit the
-		  continuous formulation together with optimal control theory
-		  to derive novel adaptive hyper-parameter adjustment
-		  policies. Our algorithms have competitive performance with
-		  the added benefit of being robust to varying models and
-		  datasets. This provides a general methodology for the
-		  analysis and design of stochastic gradient algorithms.}
+  url		= {https://proceedings.mlr.press/v70/li17f.html}
 }
 
 @Article{	  li.wang.ea:12:joint,
