--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: d7ae6978a3ff1effae43cdd241bf6d38d2b49f47
+% Commit: e210d947ca4ba97ae52627ac396ac4d51691397f
 % Date: 2023-05-31
 % ---------------------------
 
@@ -12342,7 +12342,7 @@
   author	= {Chen, Le and Foondun, Mohammud and Huang, Jingyu and
 		  Salins, Mickey},
   title		= {Global solution for superlinear stochastic heat equation
-		  on $\mathbb{R}^d$ under Osgood-type conditions},
+		  on $\mathbb{R}^d$ under {O}sgood-type conditions},
   year		= {2023},
   journal	= {Working progress}
 }
