Add my working progess paper with Panqiu on sublinear growth

--- a/All.bib
+++ b/All.bib
@@ -6,8 +6,8 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: e210d947ca4ba97ae52627ac396ac4d51691397f
-% Date: 2023-05-31
+% Commit: b2a2257b711bb51695b5cf882232e98637565923
+% Date: 2023-06-03
 % ---------------------------
 
 
@@ -13270,6 +13270,14 @@
   mrreviewer	= {Zhong Xin Zhao},
   doi		= {10.1006/jfan.1997.3104},
   url		= {https://doi.org/10.1006/jfan.1997.3104}
+}
+
+@Article{	  chen.xia:23:stochastic,
+  author	= {Chen, Le and Xia, Panqiu},
+  title		= {Stochastic partial differential equations in the sublinear
+		  regime},
+  year		= {2023},
+  journal	= {Working progress}
 }
 
 @Article{	  chen.xiong:15:annealed,
