Add a paper by Zeldovich 87 on nonlinear schalar field.

--- a/All.bib
+++ b/All.bib
@@ -6,8 +6,8 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: b2a2257b711bb51695b5cf882232e98637565923
-% Date: 2023-06-03
+% Commit: 4081377afda5bae163b497e75560958a32e5e2a7
+% Date: 2023-06-11
 % ---------------------------
 
 
@@ -59910,6 +59910,26 @@
   mrnumber	= {781350},
   doi		= {10.1007/978-1-4613-2349-5},
   url		= {https://doi.org/10.1007/978-1-4613-2349-5}
+}
+
+@Article{	  zel-dovich.molchanov.ea:87:self-excitation,
+  author	= {Zel\cprime dovich, Ya. B. and Molchanov, S. A. and
+		  Ruzmau{i}kin, A. A. and Sokoloff, D. D.},
+  title		= {Self-excitation of a nonlinear scalar field in a random
+		  medium},
+  journal	= {Proc. Nat. Acad. Sci. U.S.A.},
+  fjournal	= {Proceedings of the National Academy of Sciences of the
+		  United States of America},
+  volume	= {84},
+  year		= {1987},
+  number	= {18},
+  pages		= {6323--6325},
+  issn		= {0027-8424},
+  mrclass	= {82A42 (80A30)},
+  mrnumber	= {907831},
+  mrreviewer	= {V. Mastrangelo},
+  doi		= {10.1073/pnas.84.18.6323},
+  url		= {https://doi.org/10.1073/pnas.84.18.6323}
 }
 
 @InCollection{	  zel-dovich.molchanov.ea:88:intermittency,
